--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,10 @@
         "test": "vitest",
         "test:ui": "vitest --ui",
         "test:ci": "vitest run",
-        "test:coverage": "vitest run --coverage"
+        "test:coverage": "vitest run --coverage",
+        "pnpm": "node pnpm.js",
+        "install-and-build": "npm install && npm run build",
+        "fix-pnpm": "node enable-pnpm.js"
     },
     "dependencies": {
         "@hookform/resolvers": "^5.1.1",
